<resources>
    <string name="app_name">サプマネ</string>
    <string name="app_name_main">サプリメントマネージャー</string>
    <string name="app_name_sign_up">新規登録</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <!-- リストビュー -->
    <string name="drank_btn">飲んだ</string>

    <!-- ダイアグラム -->
    <string name="icon_dialog_title">買い足し入力</string>
    <string name="add_amount_btn">買い足し</string>
    <string name="list_item_delete">削除</string>
    <string name="cancel">キャンセル</string>

    <!-- 新規登録画面 -->
    <!--
    <string name="new_supplement_name">Supplement Name</string>
    <string name="radio_btn_left">Protein</string>
    <string name="redio_btn_right">Supplement</string>
    <string name="amount_textview">AMOUNT : </string>
    <string name="ots_textview"> One Time Serv : </string>
    <string name="sign_up_btn">Sign UP</string>
    <string name="back_btn">BACK</string>
    -->
    <string name="new_supplement_name">サプリメント名</string>
    <string name="radio_btn_left">粉状</string>
    <string name="redio_btn_right">錠剤</string>
    <string name="amount_textview">容量 : </string>
    <string name="add_amount">追加量</string>
    <string name="ots_textview"> 一回の使用量 : </string>
    <string name="sign_up_btn">登録</string>
    <string name="back_btn">戻る</string>
    <string name="add_btn">追加</string>

    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <!-- <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> -->
    <string name="banner_ad_unit_id">ca-app-pub-9493373763269069/2616454391</string> <!-- 本番環境 -->


</resources>
