<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="462dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/icon_dialog_title"
            tools:layout_editor_absoluteX="50dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="50dp">

            <Button
                android:id="@+id/add_ptn_btn"
                android:layout_width="172dp"
                android:layout_height="57dp"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="66dp"
                android:layout_marginRight="66dp"
                android:text="@string/add_amount_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="172dp"
                android:layout_height="57dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="66dp"
                android:layout_marginBottom="71dp"
                android:text="@string/list_item_delete"
                app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_ptn_btn" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="172dp"
                android:layout_height="57dp"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:layout_marginEnd="66dp"
                android:layout_marginRight="66dp"
                android:layout_marginBottom="25dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toTopOf="@+id/adView_iDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_iDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>