<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="113dp"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/one_hundred_green" />

                <LinearLayout
                    android:id="@+id/amount_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/protein_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/new_supplement_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteY="47dp">

                        <TextView
                            android:id="@+id/t_amount"
                            android:layout_width="82dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="2.27"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tamount_unit"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tamount_unit"
                            android:layout_width="41dp"
                            android:layout_height="34dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:text="kg/"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/i_amount"
                            app:layout_constraintStart_toEndOf="@+id/t_amount"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/i_amount"
                            android:layout_width="64dp"
                            android:layout_height="28dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="2.27"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/iamount_unit"
                            app:layout_constraintStart_toEndOf="@+id/tamount_unit"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/iamount_unit"
                            android:layout_width="49dp"
                            android:layout_height="31dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:text="kg"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/i_amount"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/pro_or_sup_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/protein_btn"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_btn_left"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/supplement_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/redio_btn_right"
                    android:textSize="24sp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amTextView"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/amount_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/amount_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="kg"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/otsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ots_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/one_time_serv"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/one_time_serv_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="g"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:onClick="onClick"
                android:text="@string/sign_up_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:onClick="onClick"
                android:text="@string/back_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sign_up_btn"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>